--- a/example/package.json
+++ b/example/package.json
@@ -12,5 +12,6 @@
     "@vue/compiler-sfc": "^3.0.0-beta.10",
     "vite": "^0.12.0",
     "vite-plugin-svg": "^0.1.0"
-  }
+  },
+  "version": "0.1.1"
 }
