--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "@vue/compiler-dom": "^3.0.0-beta.10",
     "@vue/compiler-sfc": "^3.0.0-beta.10",
-    "vite": "^0.12.0",
-    "vite-plugin-svg": "^0.1.0"
+    "vite": "0.13.0",
+    "vite-plugin-svg": "0.2.0"
   }
 }
