Update plugin to work with latest version of Vite

--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
   "author": "Damian Stasik <npm@coded.pl>",
   "main": "index.js",
   "dependencies": {
-    "fs-extra": "^9.0.0",
     "svgo": "^1.3.2"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
   },
   "peerDependencies": {
-    "@vue/compiler-dom": "^3.0.0-beta.10",
-    "vite": "0.13.0"
+    "@vue/compiler-dom": "^3.0.0-beta.14",
+    "vite": "^0.20.4"
   }
 }
