--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prettier": "^2.0.5"
   },
   "peerDependencies": {
-    "@vue/compiler-dom": "^3.0.0-beta.14",
+    "@vue/compiler-sfc": "^3.0.0-beta.15",
     "vite": "^0.20.4"
   }
 }
