--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   },
   "peerDependencies": {
     "@vue/compiler-sfc": "^3.0.0-beta.15",
-    "vite": "^0.20.8"
+    "vite": "^1.0.0-beta.4"
   }
 }
