--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-beta.15",
-    "vite": "^0.20.0",
+    "vite": "^1.0.0-beta.4",
     "vite-plugin-svg": "^0.4.1"
   }
 }
