--- a/example/package.json
+++ b/example/package.json
@@ -11,5 +11,6 @@
     "@vue/compiler-sfc": "^3.0.0-beta.24",
     "vite": "^1.0.0-beta.12",
     "vite-plugin-svg": "^0.5.0"
-  }
+  },
+  "version": "0.6.0"
 }
