--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,11 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-beta.24"
+    "vue": "^3.0.0-rc.4"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-beta.24",
-    "vite": "^1.0.0-beta.12",
-    "vite-plugin-svg": "^0.5.0"
+    "@vue/compiler-sfc": "^3.0.0-rc.4",
+    "vite": "^1.0.0-rc.3",
+    "vite-plugin-svg": "^0.6.0"
   }
 }
