--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "vite-plugin-svg",
-  "version": "0.7.0",
-  "description": "Use SVG files as Vue Components",
+  "name": "vite-plugin-vue-svg",
+  "version": "0.1.0",
+  "description": "Import SVG files as Vue Components",
   "keywords": [
-    "vite-plugin-svg",
+    "vite-plugin",
     "svg",
     "svgo",
     "vite",
     "vue",
     "vue3"
   ],
-  "bugs": "https://github.com/visualfanatic/vite-plugin-svg/issues",
-  "repository": "visualfanatic/vite-plugin-svg",
+  "bugs": "https://github.com/visualfanatic/vite-svg/issues",
+  "repository": "visualfanatic/vite-svg",
   "license": "MIT",
   "author": "Damian Stasik <npm@coded.pl>",
   "main": "index.js",
@@ -22,7 +22,7 @@
     "prettier": "^2.1.0"
   },
   "peerDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.7",
-    "vite": "^1.0.0-rc.4"
+    "@vue/compiler-sfc": "^3.0.0",
+    "vite": "^2.0.0-beta.61"
   }
 }
